unpackaged/main/default/objects/QS_Test_Result__c/QS_Test_Result__c.object-meta.xml
<CustomObject>
    <label>Test Result</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Test Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>