unpackaged/main/default/objects/QS_Test_Result__c/fields/Created_By_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Running_User__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By = Running User</label>
    <type>Checkbox</type>
</CustomField>