unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>QS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The partner/consultant responsible for resolving the issue.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QS_Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>