unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Comments__c.field-meta.xml
<CustomField>
    <fullName>QS_Comments__c</fullName>
    <inlineHelpText>Any other explanation needed to detail what happened with the test.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>