unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>QS_Created_Date_Time__c</fullName>
    <description>Indicates the time the test result was created. Used in reporting</description>
    <formula>IF(
Hour(TIMEVALUE(CreatedDate)) &lt; 10,
Text(MONTH(DateValue(CreatedDate))) &amp;&quot;/&quot;&amp; Text(DAY(DateValue(CreatedDate))) &amp;&quot;, 0&quot;&amp;
Text(
Hour(
TIMEVALUE(
CreatedDate))
)
&amp;&quot;:00 GMT&quot;
,
Text(MONTH(DateValue(CreatedDate))) &amp;&quot;/&quot;&amp; Text(DAY(DateValue(CreatedDate))) &amp;&quot;, &quot;&amp;
Text(
Hour(
TIMEVALUE(
CreatedDate))
)
&amp;&quot;:00 GMT&quot;
)</formula>
    <inlineHelpText>Indicates the time the test result was created. Used in reporting</inlineHelpText>
    <label>Created Date Time</label>
    <type>Text</type>
</CustomField>