unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Estimated_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Estimated_Resolution_Date__c</fullName>
    <description>The date in which the submitted issue will be fixed.</description>
    <inlineHelpText>The date in which the submitted issue will be fixed.</inlineHelpText>
    <label>Estimated Resolution Date</label>
    <type>Date</type>
</CustomField>