unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Failure_Criticality__c.field-meta.xml
<CustomField>
    <fullName>QS_Failure_Criticality__c</fullName>
    <inlineHelpText>Must Have - this Scenario is critical for Go-Live
Negotiable - this Scenario is recommended for Go-Live
Nice to Have - this Scenario is not critical for Go-Live</inlineHelpText>
    <label>Failure Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Negotiable</fullName>
            </value>
            <value>
                <fullName>Nice to Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>