unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>QS_Failure_Reason__c</fullName>
    <inlineHelpText>Used by the developer to explain the failure:
Code - Bad coding
Configuration - Incorrect configuration 
Product - Product malfunction
User Error - Insufficient training</inlineHelpText>
    <label>Failure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect - Code</fullName>
            </value>
            <value>
                <fullName>Defect - Configuration</fullName>
            </value>
            <value>
                <fullName>Defect - Product</fullName>
            </value>
            <value>
                <fullName>Defect - Data</fullName>
            </value>
            <value>
                <fullName>User Error/Training</fullName>
            </value>
            <value>
                <fullName>Invalid Scenario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>