unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Has_been_retested__c.field-meta.xml
<CustomField>
    <fullName>QS_Has_been_retested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been retested</label>
    <type>Checkbox</type>
</CustomField>