unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Original_Test_Result__c.field-meta.xml
<CustomField>
    <fullName>QS_Original_Test_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the original failed test result that was retested</description>
    <inlineHelpText>Indicates the original failed test result that was retested</inlineHelpText>
    <label>Original Test Result</label>
    <referenceTo>QS_Test_Result__c</referenceTo>
    <relationshipLabel>Retested Results</relationshipLabel>
    <relationshipName>Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>