unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Ready_for_Retest__c.field-meta.xml
<CustomField>
    <fullName>QS_Ready_for_Retest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The developer will check this box when the problem is resolved.</inlineHelpText>
    <label>Ready for Retest</label>
    <type>Checkbox</type>
</CustomField>