unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Ready_for_Retest_Date__c.field-meta.xml
<CustomField>
    <fullName>QS_Ready_for_Retest_Date__c</fullName>
    <label>Ready for Retest Date</label>
    <type>DateTime</type>
</CustomField>