unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Resolver_Notes__c.field-meta.xml
<CustomField>
    <fullName>QS_Resolver_Notes__c</fullName>
    <inlineHelpText>How was the issue fixed?</inlineHelpText>
    <label>Resolution Notes</label>
    <type>TextArea</type>
</CustomField>