unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Steps_to_Reproduce__c.field-meta.xml
<CustomField>
    <fullName>QS_Steps_to_Reproduce__c</fullName>
    <inlineHelpText>Specific step-by-step instructions to reproduce a failed result.</inlineHelpText>
    <label>Steps to Reproduce</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>