unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Test_Cycle__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Cycle__c</fullName>
    <inlineHelpText>When did this test occur? Will be set by default.</inlineHelpText>
    <label>Test Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Models</fullName>
                <default>true</default>
                <label>Working Models</label>
            </value>
            <value>
                <fullName>Pre-Validation</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Pre-Unit Testing</fullName>
            </value>
            <value>
                <fullName>Unit Testing</fullName>
            </value>
            <value>
                <fullName>Pre-Integrated Testing</fullName>
            </value>
            <value>
                <fullName>Integrated Testing</fullName>
            </value>
            <value>
                <fullName>Pre-End to End Testing</fullName>
            </value>
            <value>
                <fullName>End to End Testing</fullName>
            </value>
            <value>
                <fullName>Pre-Go-Live</fullName>
            </value>
            <value>
                <fullName>Go-Live</fullName>
            </value>
            <value>
                <fullName>Post Go-Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>