unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Test_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Record_URL__c</fullName>
    <inlineHelpText>Copy and paste the URL of the Test Record here that had a Failed or Passed with Exception result.</inlineHelpText>
    <label>Test Record URL</label>
    <type>Url</type>
</CustomField>