unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Test_Result_Dev_Assigned_to_Me__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Result_Dev_Assigned_to_Me__c</fullName>
    <formula>QS_Assigned_To__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Result Dev Assigned to Me</label>
    <type>Checkbox</type>
</CustomField>