unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Test_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>QS_Test_Result_Status__c</fullName>
    <inlineHelpText>Did this test pass?</inlineHelpText>
    <label>Test Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Passed, with exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>