unpackaged/main/default/objects/QS_Test_Result__c/fields/QS_Tester_Profile__c.field-meta.xml
<CustomField>
    <fullName>QS_Tester_Profile__c</fullName>
    <description>Indicates the profile of the user when they logged the test result</description>
    <inlineHelpText>Indicates the profile of the user when they logged the test result</inlineHelpText>
    <label>Tester Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>