unpackaged/main/default/objects/QS_Test_Result__c/validationRules/Comments_Required_if_Blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>Comments_Required_if_Blocked</fullName>
    <active>true</active>
    <description>Comments are required if test result is marked as &quot;Blocked&quot;</description>
    <errorConditionFormula>AND(
ISPICKVAL( QS_Test_Result_Status__c , &quot;Blocked&quot;),
QS_Comments__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>QS_Comments__c</errorDisplayField>
    <errorMessage>Comments required</errorMessage>
</ValidationRule>