unpackaged/main/default/objects/QS_Test_Result__c/validationRules/Failure_Criticality_required_for_fails.validationRule-meta.xml
<ValidationRule>
    <fullName>Failure_Criticality_required_for_fails</fullName>
    <active>true</active>
    <description>Failure Criticality required for failed Test Results</description>
    <errorConditionFormula>OR(TEXT( QS_Test_Result_Status__c ) = &quot;Failed&quot;,TEXT( QS_Test_Result_Status__c ) = &quot;Passed, with Exception&quot;) &amp;&amp;  ISBLANK(TEXT( QS_Failure_Criticality__c ))</errorConditionFormula>
    <errorMessage>You must state failure criticality for failed test results</errorMessage>
</ValidationRule>