unpackaged/main/default/objects/QS_Test_Result__c/validationRules/Restrict_Test_Result_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Test_Result_Creation</fullName>
    <active>true</active>
    <description>Cannot create Test Results until the requirement is ready for testing</description>
    <errorConditionFormula>QS_Test_Scenario__r.RecordType.DeveloperName = &#39;UAT Test Scenario&#39;
&amp;&amp;
ISNEW() 
&amp;&amp; 
OR( 
TEXT( QS_Test_Scenario__r.QS_Status__c ) = &quot;Not Ready to Test&quot;, 
TEXT( QS_Test_Scenario__r.QS_Status__c ) = &quot;Withdrawn&quot;, 
TEXT( QS_Test_Scenario__r.QS_Requirement__r.QS_Development_Status__c ) &lt;&gt; &quot;Ready for Testing&quot;,
TEXT( QS_Test_Scenario__r.QS_Requirement__r.QS_Development_Status__c ) &lt;&gt; &quot;Ready for QA&quot; 
)</errorConditionFormula>
    <errorMessage>Woah McFly! You cannot log a Test Result if the Requirement is not ready for testing</errorMessage>
</ValidationRule>