unpackaged/main/default/objects/QS_Test_Result__c/validationRules/Steps_to_reproduce_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Steps_to_reproduce_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISBLANK(QS_Test_Record_URL__c),
ISBLANK(QS_Steps_to_Reproduce__c )),
OR(
ISPICKVAL(QS_Test_Result_Status__c , &quot;Failed&quot;), 
ISPICKVAL(QS_Test_Result_Status__c , &quot;Passed, with Exception&quot;)
))</errorConditionFormula>
    <errorMessage>Steps to Reproduce and URL for the Test Record that Failed or Passed with Exception is required</errorMessage>
</ValidationRule>