unpackaged/main/default/objects/QS_Test_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>QS_Test_Result_Status__c</columns>
    <columns>QS_Test_Scenario__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Test_Result_Status__c</field>
        <operation>notEqual</operation>
        <value>Passed</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>3/11/2022 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>