unpackaged/main/default/objects/QS_Test_Result__c/listViews/All_Test_Results.listView-meta.xml
<ListView>
    <fullName>All_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>QS_Test_Cycle__c</columns>
    <columns>QS_Test_Scenario__c</columns>
    <columns>QS_Steps_to_Reproduce__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QS_Test_Result_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Results</label>
</ListView>