unpackaged/main/default/objects/QS_Test_Result__c/listViews/Passed_Test_Results.listView-meta.xml
<ListView>
    <fullName>Passed_Test_Results</fullName>
    <columns>NAME</columns>
    <columns>QS_Test_Cycle__c</columns>
    <columns>QS_Test_Scenario__c</columns>
    <columns>QS_Steps_to_Reproduce__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QS_Test_Result_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QS_Test_Result_Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </filters>
    <label>Passed Test Results</label>
</ListView>